# load-wasm-simple

./: README.md
simple-wasm-loader/: package.json
simple-wasm-loader/public/: index.html
simple-wasm-loader/src/: App.tsx  index.tsx
simple-wasm-loader/src/wasm-pkg/: factorial.js  factorial.wasm  index.d.ts  index.js  package.json
simple-wasm-loader/webpack/: webpack.config.common.ts
simple-wasm-pkg/: CMakeLists.txt  CMakePresets.json
simple-wasm-pkg/src/: CMakeLists.txt  factorial.cpp  factorial.h  index.d.ts  index.js  mult.cpp  mult.h  package.json
